# rules_jvm_external-bug-reproducer-c

./: .bazelrc  MODULE.bazel  maven_install.json
.github/workflows/: push.yml
